General cleanup Added Projects and Releases Tagged all Projects and Releases

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,5 +12,7 @@
 </div>
 
 <div class="sidebar well">
+{% include releases.html %}
+{% include projects.html %}
 {% include links-list.html %}
 </div>
