--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,7 @@
             {% include sidebar.html %}
         </div>
         <div class="col-md-9">
+        	<h1> {{ categories }} </h1>
             {{ content }}
         </div>
     </div>
