--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,10 +31,12 @@
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/about.html">About</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/cv">CV</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
                     {% if site.github != '' %}
                       <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
                     {% endif %}
+                    <li class="active"><a href="https://twitter.com/stuckieGAMEZ">Twitter</a></li>
                 </ul>
               </div>
         </div>
