--- a/_includes/links-list.html
+++ b/_includes/links-list.html
@@ -1,7 +1,4 @@
 <h1>Links</h1>
 <ul>
-  <li><a href="#">One</a></li>
-  <li><a href="#">Two</a></li>
-  <li><a href="#">Three</a></li>
-  <li><a href="#">Four</a></li>
+  <li><a href="http://www.arcadebadgers.co.uk">Arcade Badgers</a></li>
 </ul>
