--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,5 +14,6 @@
 <div class="sidebar well">
 {% include releases.html %}
 {% include projects.html %}
+{% include collection.html %}
 {% include links-list.html %}
 </div>
