--- a/_includes/releases.html
+++ b/_includes/releases.html
@@ -1,8 +1,9 @@
 <h1>Releases</h1>
 <ul>
-  {% for page in site.pages %}
-  {% if page.categories contains 'Releases' %}
-  	<li><a href="{{site.baseurl}}{{page.url}}">{{page.title}}</a></li>
-  {% endif %}
+{% assign sorted = site.pages | sort: 'date' | reverse %}
+{% for page in sorted %}
+	{% if page.categories contains 'Releases' %}
+		<li><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>
+	{% endif %}
 {% endfor %}
 </ul>
